# open_position_app

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_app.ps1
data/pfc/: 20260702_EEX_PFC_2027.xlsx  20260702_EEX_PFC_2029.xlsx
docs/: IMPLEMENTIERUNG.md
docs/input/: 20260702_EEX_PFC_2026.xlsx  20260702_EEX_PFC_2028.xlsx  tmp_+Offene Positionen_Übersicht.xlsm
docs/specifications/: 00_projektauftrag.md  01_fachliche_funktionen.md  02_datenmodell_sqlite.md  03_streamlit_ui_konzept.md  04_workflows_automatisierungen.md  05_umsetzungsplan_codex_claude.md  06_excel_mockdaten_import.md  07_projektstruktur_claude_code.md  08_claude_code_prompts.md  09_codex_review_prompts.md  10_agent_workflow.md  11_deployment_postgres.md  CHANGELOG.md  README.md
pages/: 1_Position.py  2_Preise.py  3_Limitorder.py  4_Handelskalender.py
scripts/: init_db.py  seed_default_mock_data.py  seed_from_excel.py
src/: config.py  format_utils.py  ui_helpers.py  user_context.py
src/db/: database.py  default_mock_values.py  init_db.py  models.py  seed_default_mock_data.py
src/domain/: calendar_utils.py  limit_order_logic.py  position_logic.py  price_logic.py  quantity_utils.py  text_generation.py  trading_calendar_logic.py  validation.py
src/repositories/: intraday_trade_repository.py  limit_order_repository.py  metadata_repository.py  portfolio_repository.py  price_repository.py  (+1 more)
tests/: test_calendar_utils.py  test_excel_import_mapping.py  test_initialization_service.py  test_layout_bootstrap.py  test_limit_order_logic.py  test_limit_order_service.py  test_position_logic.py  test_position_service.py  test_price_logic.py  test_price_service.py  test_quantity_utils.py  test_text_generation.py  test_trading_calendar_logic.py  test_trading_calendar_service.py  test_validation.py
views/: handelskalender.py  limitorder.py  position.py  preise.py
(+7 files in other folders)
